<resources>
    <string name="app_name">RollDice</string>
    <string name="rolls_title"> Toque no Dado que você quer rolar! </string>

    <string name="rolls_d2"> D2 </string>
    <string name="rolls_d3"> D3 </string>
    <string name="rolls_d4"> D4 </string>
    <string name="rolls_d6"> D6 </string>
    <string name="rolls_d8"> D8 </string>
    <string name="rolls_d10"> D10 </string>
    <string name="rolls_d12"> D12 </string>
    <string name="rolls_d20"> D20 </string>
    <string name="rolls_d100"> D100 </string>
</resources>
