<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ilegra.rolldice.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:text="@string/rolls_title" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:text="@string/rolls_d2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d2_button"
                android:value="2"
                style="@style/Widget.AppCompat.Button.Small" />

            <Button
                android:text="@string/rolls_d3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d3_button"
                android:value="3"
                style="@style/Widget.AppCompat.Button.Small" />

            <Button
                android:text="@string/rolls_d4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d4_button"
                android:value="4"
                style="@style/Widget.AppCompat.Button.Small" />

            <Button
                android:text="@string/rolls_d6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d6_button"
                android:value="6"
                style="@style/Widget.AppCompat.Button.Small" />

            <Button
                android:text="@string/rolls_d8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d8_button"
                android:value="8"
                style="@style/Widget.AppCompat.Button.Small" />

            <Button
                android:text="@string/rolls_d10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d10_button"
                android:value="10"
                style="@style/Widget.AppCompat.Button.Small" />

            <Button
                android:text="@string/rolls_d12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d12_button"
                android:value="12"
                style="@style/Widget.AppCompat.Button.Small" />

            <Button
                android:text="@string/rolls_d20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d20_button"
                android:value="20"
                style="@style/Widget.AppCompat.Button.Small" />

            <Button
                android:text="@string/rolls_d100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d100_button"
                android:value="100"
                style="@style/Widget.AppCompat.Button.Small" />

        </TableRow>
    </TableLayout>

</RelativeLayout>
